sumo/tests/duarouter/routes/style1_input/errors/vehicle_false_departpos/errors.duarouter
Error: Invalid departpos definition for vehicle '0'
Quitting (on error).
